hphp/test/slow/memory/shutdown_handler_can_still_oom.php.expectf

Fatal error: request has exceeded memory limit in %s/hphp/test/slow/memory/shutdown_handler_can_still_oom.php on line 12
IN SHUTDOWN

Fatal error: request has exceeded memory limit in %s/hphp/test/slow/memory/shutdown_handler_can_still_oom.php on line 8
